test/errors/pubsub_types_error/zs/sql_database_type_error.zs
package sql_database_type_error;

sql_table Table
{
    int32 id;
};

sql_database Data
{
    Table table;
};

pubsub Provider
{
    publish("provider/data") Data data;
};
